Alteração do comentário e inclusão de cor no Texto

--- a/cal_fat_Browser.html
+++ b/cal_fat_Browser.html
@@ -1,5 +1,3 @@
-// Calculadora Fatura de Energia
-
 <!DOCTYPE html>
 <html lang="en">
 
@@ -7,6 +5,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Calc-Fat</title>
+    <style>
+        /* CSS incorporado para alterar a cord do titulo */
+        h1 {
+            color: red;
+            /* Define a cor do titulo */
+        }
+
+        /* Adiciona cor azul para o parágrafo */
+        p {
+            color: blue;
+            /* Define a cor do texto do parágrafo como azul */
+        }
+    </style>
 </head>
 
 <body>
