Alteração do nome dos arquivos e realizado novas atualizações incluindo calFat_bwv.html como novo versionamento

--- a/calFat_bw_02v.html
+++ b/calFat_bw_02v.html
@@ -22,7 +22,7 @@
         input {
             font-family: "Roboto";
             color: blueviolet;
-            //background-color: black;
+            background-color: black;
         }
 
         /* Adiciona cor azul para o parágrafo */
