--- a/calFatura/src/recuperar_senha.html
+++ b/calFatura/src/recuperar_senha.html
@@ -1,12 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Recuperar Senha</title>
+    <link rel="stylesheet" type="text/css" href="../styles/styles_recuperar_senha.css">
 </head>
-
 <body>
     <h1>Recuperar Senha</h1>
     <form id="recuperarSenhaForm">
@@ -56,5 +55,4 @@
         });
     </script>
 </body>
-
 </html>
