--- a/calFatura/admin/admin.html
+++ b/calFatura/admin/admin.html
@@ -4,6 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Incluindo o link para o arquivo CSS -->
+    <link rel="stylesheet" type="text/css" href="../admin/style_admin.css">
     <title>Visualizar e Deletar Usuários</title>
 </head>
 
