--- a/calFatura/src/cadastro.html
+++ b/calFatura/src/cadastro.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cadastro de Usuário</title>
+    <link rel="stylesheet" type="text/css" href="../styles/styles_cadastro.css">
 </head>
 <body>
     <h1>Cadastro de Usuário</h1>
