--- a/calFatura/src/login.html
+++ b/calFatura/src/login.html
@@ -1,12 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
+    <link rel="stylesheet" type="text/css" href="../styles/styles_login.css">
 </head>
-
 <body>
     <h1>Login</h1>
     <form id="loginForm">
@@ -54,5 +53,4 @@
         });
     </script>
 </body>
-
 </html>
